...
            ) : null}
            {confirm ? <IssueList issues={confirm.ev.issues} /> : null}
          </Dialog.Content>
          <Dialog.Actions>
            <Button onPress={() => setConfirm(null)}>Cancel</Button>
            <Button
              testID="feature-confirm"
              onPress={() => {
                if (confirm) {
                  enable(confirm.f);
                }
                setConfirm(null);
              }}
...
